kubernetes/ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: nginx-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: nginx-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: nginx-ingress-lb
    spec:
      dnsPolicy: ClusterFirst
      containers:
      - name: nginx-ingress-controller
        image: k8s.gcr.io/ingress-nginx/controller:v1.1.1
        args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/nginx-configuration
        - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-services
        - --udp-services-configmap=$(POD_NAMESPACE)/udp-services
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        securityContext:
          runAsUser: 101
          allowPrivilegeEscalation: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
        lifecycle:
          preStop:
            exec:
              command:
              - /wait-shutdown
