kubernetes/housing-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depl
  labels:
    app: housing-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: housing-backend
  template:
    metadata:
      labels:
        app: housing-backend
    spec:
      containers:
        - name: housing-backend
          image: stefanmhall/house-backend:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: housing-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
