kubernetes/housing-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
  labels:
    app: housing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: housing
  template:
    metadata:
      labels:
        app: housing
    spec:
      containers:
      - name: housing
        image: stefanmhall/house-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: housing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
